# printf

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  meson.build  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  meson.yml
doc/: thesis.tex  vazlat.md
doc/bib/: mybib.bib
doc/content/: abstract.tex  acknowledgement.tex  appendices.tex  handbook.tex  history.tex  implementation.tex  introduction.tex  planning.tex  source.tex  specification.tex  summary.tex  testing.tex
doc/figures/uml/: howto_export.md
doc/include/: declaration.tex  packages.tex  preamble.tex  thesis-hu.tex
presets/: sample.json
presets/document/: 1067.json  1118.json  610.json  914.json  tekercs.json
presets/image/: a0.json  a1.json  a2.json  a3.json  a4.json  a5.json  a6.json  a7.json  poster.json  sticker49.json  sticker70.json
presets/mask/: circlemask.json
presets/printer/: evil_plotter.json
pseudo/: tiling.md
src/: main.cpp  paper_type.h
src/img/: cached_image.cpp  cached_image.hpp  griddy.cpp  image_source.cpp  image_source.hpp  source.cpp  source.hpp  tiling.cpp  tiling.hpp
src/img/filters/: filter.cpp  filter.hpp  filter_store.cpp  filter_store.hpp  ifilter.hpp  mask.cpp  mask.hpp  padding.cpp  padding.hpp  rotate.cpp  rotate.hpp  size.cpp  size.hpp
src/img/tiling/: grid_tiling.cpp  grid_tiling.hpp  strip_rg.cpp  strip_rg.hpp  strip_tiling.cpp  strip_tiling.hpp  tile.hpp  tiling.hpp
src/interfaces/: icachable.hpp  icache.hpp
src/qml/: Application.qml  File.qml  FileList.qml  ImagePicker.qml  MaskInput.qml  OutputBar.qml  Preview.qml  Properties.qml  SavePicker.qml  SizeInput.qml  UnitCheckBox.qml  UnitInput.qml  UnitSpinBox.qml  example.qml  resources.qrc
src/settings/: document_preset.cpp  document_preset.hpp  document_presets.cpp  document_presets.hpp  roll_presets.cpp  source_presets.cpp
src/ui/: dataentrymodel.cpp  dataentrymodel.h  document_properties_view.cpp  document_properties_view.hpp  error_signal.cpp  error_signal.hpp  generator_view.cpp  generator_view.hpp  ifilter_view.hpp  image_preset_view.cpp  image_preset_view.hpp  image_source_view.cpp  image_source_view.hpp  inputfile.cpp  inputfile.hpp  mask_filter_view.cpp  mask_filter_view.hpp  pdf_source_view.cpp  pdf_source_view.hpp  preset_view.cpp  preset_view.hpp  preview_provider.cpp  preview_provider.hpp  source_entry_view.cpp  source_entry_view.hpp
src/util/: convert.cpp  convert.hpp  defaults.hpp  jsonprobe.cpp  jsonprobe.hpp  pnghelper.cpp  pnghelper.hpp
uml/: img_source.puml  presets.puml  tiling.puml  ui.puml
